Updates till Stage 3 and updated readme

--- a/task-discovery/retrieve_top-k_samples/retrieve_top-k_samples.ipynb
+++ b/task-discovery/retrieve_top-k_samples/retrieve_top-k_samples.ipynb
@@ -36,9 +36,7 @@
     "import utils\n",
     "\n",
     "torch.set_grad_enabled(False)\n",
-    "# TODO: Set the proper device id for gpu use\n",
-    "device_ids = [0,1,2,3,5,6,7]\n",
-    "device = torch.device('cuda', device_ids[0]) #device = torch.device('cuda')\n",
+    "device = torch.device('cuda')\n",
     "\n",
     "import matplotlib\n",
     "matplotlib.rcParams[\"figure.dpi\"] = 200\n",
@@ -160,12 +158,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Agreement score calculated on the architecture as task-net. E.g., if task-net=mlp then agreement score calculated using mlp architectures.\n",
     "as_table = pd.read_csv(f'../assets/tasks/agreement_table_{TASK_ID}.csv')\n",
+    "as_table = as_table[as_table['task'] == TASK_TYPE]\n",
     "\n",
     "if len(as_table) > 0:\n",
     "    as_table = as_table.drop(columns=['task'])\n",
@@ -206,8 +205,7 @@
     "            for index, row in merged_df.iterrows():\n",
     "                if torch.all(torch.eq(row['PIL_image'], xs_item)):\n",
     "                    cor_file_index_pairs.append((index, row['filename']))\n",
-    "                    #matching = True\n",
-    "                    break\n",
+    "                    #break\n",
     "\n",
     "        # Filter out rows in merged_df where no match was found\n",
     "        # merged_df = merged_df.loc[merged_df.index.isin(idx for idx, _ in cor_file_index_pairs)]\n",
@@ -242,7 +240,7 @@
     "                    #cor_file_names.append(row['filename'])\n",
     "                    cor_file_index_pairs.append((index, row['filename']))\n",
     "                    #matching = True\n",
-    "                    break\n",
+    "                    # break\n",
     "        \n",
     "        #idx_list = idx_botk[:,tid].tolist()\n",
     "        if cor_file_index_pairs:\n",
